feat: 레이아웃 기본 구조 설정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "jsxImportSource": "@emotion/react",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "typeRoots": ["./@types"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
