--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive": "^9.0.0-beta.10",
     "zustand": "^4.1.1"
   },
   "devDependencies": {
