--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-responsive": "^9.0.0-beta.10",
+    "react-youtube": "^9.0.3",
     "zustand": "^4.1.1"
   },
   "devDependencies": {
